@@ -4,6 +4,10 @@
 	obenergy, obminimize, and obrotamer.
 
 	* Doxyfile-man: Update to point to new babel location.
+
+	* src/chains.cpp: Fixing bug with chain perception related to
+	PR#1626789, possibly also 1577248. Setting visit flags skipped
+	marking some atoms as members of residues. Still some bugs.
 	
 2007-03-08  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
